--- a/papers/Rashba/Rashba.tex
+++ b/papers/Rashba/Rashba.tex
@@ -521,7 +521,7 @@ This draws the attention to the inclusion of $H_R$ in Eq.~\eqref{eq:Rashba_hami}
 \end{figure*}
 
 \section{Conclusions}
-To conclude this Chapter, we take a step back and summarize the original problem, proposed solution and numerical investigation of the large Rashba-like spin-splitting in bulk ferroelectric materials.
+To conclude this Chapter, we take a step back and summarize the original problem, proposed resolution and numerical investigation of the large Rashba-like spin-splitting in bulk ferroelectric materials.
 \\\\
 The impetus of this research was the observation that the linear spin-splitting that occurs in these bulk materials is orders of magnitude larger than what can be explained by relativistic effects.
 Moreover, a closer inspection led to the conclusion that the splitting is heavily influenced by the character of the bands, resulting in a different orientation and size of the splitting in each band.
